<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name = "hello_world">Hello,World</string>
    <string name="app_name">notify</string>
    <string name="action_settings">Settings</string>
    <string name="judgement">评论</string>
    <string name="join_in">参加</string>
    <string name="home_page">主页</string>
    <string name="public_annou">发布</string>
    <string name="search">搜索</string>
    <string name="about_me">我</string>
    <string name = "name">姓名</string>
    <string name = "sign_in">登陆</string>
    <string name="sdu_icon">SDU</string>
    <string name="text">7月27日，山东大学合作建设的新加坡南洋理工大学孔子学院举办
           成立十周年庆典活动。山东大学校长张荣在活动前专门致贺信，祝贺孔子学院成立十周年，
           常务副校长王琪珑应邀率团出席活动。
 　　 张荣在贺信中说，山东大学和南洋理工大学十年前扣准脉搏，把握先机，
            合力使得南洋理工大学孔子学院成为全球最早成立的孔子学院之一，
            希望两校在下一个十年同心协力，让孔子学院为促进双方超越时空、跨越国界的友好交流再作贡献。
            庆典上，新加坡教育部长王瑞杰、南洋理工大学校长Bertil Anderson、
            南洋理工大学孔子学院理事长陈金樑等新方代表分别发言，</string>
     <string name="sdu_name">SDU</string>
     <string name="deliver">发表</string>
     
     <string name="say_something">说点什么吧</string>
     
     <string name="yes_pic">成功参与的图标</string>
     <string name="share">分享给小伙伴</string>
     <string name="contact">联系负责人</string>
     <string name="share_pic">分享图标</string>
     <string name="contact_pic">联系图标</string>
     <string name="participant">一起参与的小伙伴</string>
     
     <string name="advert">写下你的活动宣传吧</string>
     <string name="add_picture">添加图片</string>
     <string name="add_pic">加号图标</string>
     
     <string name="my_activity_par">我参与的活动</string>
     <string name="my_activity_org">我组织的活动</string>
     <string name="my_activity_follow">我关注的活动</string>
     
     <string name="search_hint">输入搜索的内容吧</string>
     <string name="search_pic">搜索图标</string>
     
     <string name="choice">选择注册类型</string>
     <string name="org">学生会</string>
     <string name="personnal">个人</string>
     <string name="already_signed_up">已有账号？</string>
     <string name="school_name">学校名称</string>
     <string name="org_name">组织名称</string>
     <string name="passwd">密码</string>
     <string name="passwd_conf">确认密码</string>
     <string name="contact_num">联系电话</string>
     <string name="person_in_charge">负责人</string>
     <string name="commit">提交</string>
     <string name="schoole_example">山东大学</string>
     <string name="org_example">山大计算机学生会</string>
     <string name="phone_num_example">12345678</string>
     <string name="name_in_charge_example">张三</string>
     
     <string name="sid">学号</string>
     <string name="sid_example">12345678</string>
	 <string name='name_example'>张三</string>
	 <string name="customer_activity">活动</string>
	 
	 <string name="sign_up">注册</string>
	 <string name="org_sign_in">组织登陆入口</string>
	 <string name="personnal_sign_in">个人登陆入口</string>
	 
	 <string name="sign_up_succ">恭喜您 \n注册成功!</string>
	 
	 <string name="enter">进入活动通</string>
</resources>
