<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sign_in_org"
     >

    <include layout="@layout/main_load"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/school_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/sign_in_org_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="37dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" 
        android:hint="@string/schoole_example">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_org_school"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/sign_in_org_school"
        android:text="@string/org_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/sign_in_org_club"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_in_org_school"
        android:layout_alignRight="@+id/sign_in_org_school"
        android:layout_alignTop="@+id/TextView01"
        android:ems="10"
        android:hint="@string/org_example" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/sign_in_org_club"
        android:layout_marginTop="20dp"
        android:text="@string/passwd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/sign_in_org_pass1"
        android:layout_marginTop="20dp"
        android:text="@string/passwd_conf"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/sign_in_org_pass2"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:text="@string/contact_num"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/sign_in_org_phone"
        android:layout_marginTop="20dp"
        android:text="@string/person_in_charge"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/sign_in_org_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_in_org_school"
        android:layout_alignRight="@+id/sign_in_org_school"
        android:layout_alignTop="@+id/textView4"
        android:ems="10" 
        android:hint="@string/phone_num_example"/>

    <EditText
        android:id="@+id/sign_in_org_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/sign_in_org_school"
        android:layout_alignRight="@+id/sign_in_org_school"
        android:ems="10" 
        android:hint="@string/name_in_charge_example"/>

    <EditText
        android:id="@+id/sign_in_org_pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_in_org_name"
        android:layout_alignRight="@+id/sign_in_org_school"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/sign_in_org_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_in_org_school"
        android:layout_alignRight="@+id/sign_in_org_school"
        android:layout_alignTop="@+id/textView3"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_org_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/sign_in_org_name"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:textColor="@color/white"
        android:text="@string/commit" />

</RelativeLayout>
