<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:contentDescription="@string/sdu_icon"
        android:src="@drawable/sdu" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:text="@string/text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/sdu_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="29dp"
        android:background="@drawable/shape"
        android:text="@string/judgement" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/textView2"
        android:background="@drawable/shape"
        android:text="@string/join_in" />

</RelativeLayout>